--- a/HP_Nano_GPT.ipynb
+++ b/HP_Nano_GPT.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPwblodh/vW8CP3rJKM5pZ",
+      "authorship_tag": "ABX9TyOWYAqUDmRVlYyQzz8s+nqZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,29 +42,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XAkxLZmB4zka",
-        "outputId": "6caf6ffc-c4a7-417a-a78f-ed3da8ed77fb"
+        "outputId": "1f4dc5ef-c8c0-4d9f-81d3-a2ab7a3b2ece"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-05-30 00:50:12--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2025-06-11 02:51:36--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1115394 (1.1M) [text/plain]\n",
             "Saving to: ‘input.txt’\n",
             "\n",
-            "input.txt           100%[===================>]   1.06M  --.-KB/s    in 0.04s   \n",
+            "input.txt           100%[===================>]   1.06M  --.-KB/s    in 0.05s   \n",
             "\n",
-            "2025-05-30 00:50:12 (24.5 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
+            "2025-06-11 02:51:37 (22.8 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
             "\n"
           ]
         }
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "5RxzOhsz9g8u"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -98,9 +98,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R6-AxVUt9iqW",
-        "outputId": "5fdb9a29-036c-4d9a-cc1d-f2bf110a764f"
+        "outputId": "45e0f9c6-83d8-4a57-ff2c-fcb897dc028b"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,9 +155,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x-WLymyzwKEq",
-        "outputId": "bd8736d0-865b-473d-cf26-af6ed2b7c9eb"
+        "outputId": "da56f905-7636-4735-bebb-4a981e61c5f3"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,9 +189,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M6y97uo8wZhU",
-        "outputId": "5c80046c-e896-4233-fba6-20e755aef679"
+        "outputId": "dd21c32a-a70e-41a5-e295-cc8692356880"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,9 +219,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l-PM0mozw3UE",
-        "outputId": "07fa42cf-f107-47ba-ef8c-7d8c2da9ebcc"
+        "outputId": "6fe90269-4990-4346-d3d4-bc6d4700dd48"
       },
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,7 +273,7 @@
       "metadata": {
         "id": "Vvu1-1uezE-P"
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -287,9 +287,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QVroh7t0zR8L",
-        "outputId": "291fd57b-da0a-407b-c7ee-d781e1c0db14"
+        "outputId": "da2bf770-5b40-4c26-9ad1-e1993723506b"
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -299,7 +299,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 9
         }
       ]
     },
@@ -313,19 +313,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H4Z4j1Vp9_46",
-        "outputId": "dc97a5b4-436f-451e-ec1d-879ff64b700f"
+        "outputId": "8b156cfb-98c6-42a1-a038-d97ca258a296"
       },
-      "execution_count": 13,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x7fdbbeb70ef0>"
+              "<torch._C.Generator at 0x7ba0c472abb0>"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 10
         }
       ]
     },
@@ -345,9 +345,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pk_g0qBPzjIJ",
-        "outputId": "a54482f5-3a3b-4988-f4e4-2a3ccfe3c290"
+        "outputId": "700e50a4-dbca-45d9-ba26-0c2be3d5fe63"
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,7 +383,7 @@
       "metadata": {
         "id": "_oDOxm4I8dNi"
       },
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -402,9 +402,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "765HYs4M9-bl",
-        "outputId": "db319604-e386-4bfd-f157-e6f23daba22b"
+        "outputId": "900e7e8c-7be4-4e1e-cfe4-28740d67ae47"
       },
-      "execution_count": 16,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,9 +457,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eytjEKTuDEgR",
-        "outputId": "3bafe3a0-893b-4cdb-91ae-9d0513ee5a73"
+        "outputId": "4b46a791-8349-4fb6-df87-6cc41ea09e17"
       },
-      "execution_count": 31,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,6 +538,8 @@
         "print(logits.shape)\n",
         "print(loss)\n",
         "idx = torch.zeros((1, 1),  dtype=torch.long)\n",
+        "\n",
+        "\n",
         "print(decode(m.generate(idx, max_new_tokens=100)[0].tolist()))\n"
       ],
       "metadata": {
@@ -545,18 +547,94 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hnM_hxyf_5pP",
-        "outputId": "a1347f22-baa9-4179-ed64-63171d9fc8fc"
+        "outputId": "76b633e5-aecd-45ba-83ef-f249a88ac519"
       },
-      "execution_count": 36,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "torch.Size([32, 65])\n",
-            "tensor(4.3902, grad_fn=<NllLossBackward0>)\n",
+            "tensor(4.5296, grad_fn=<NllLossBackward0>)\n",
             "\n",
-            "tEsJP3p-uHU'DDDZXnBBNOi:acB JqPX-uy;fhreEZhbos,haRKH:Gr!WCwuVX3sr3MQnBS!BaRUz. El:Ke.MDIGf-;fdVKC,-i\n"
+            "PgDjwM $TbDIheuhkSFAQUInQufgWOWef;xInx;atKvFhyYrACeR!AWOn:QZ. KBV:U?\n",
+            "pW!VuAENOWtqhRrJZEsPk.xaQKD!A\n",
+            "Q\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " # create a Pytorch optimizer\n",
+        " # lr = learning rate = The learning rate is a scalar value (typically between 0 and 1) that dictates how much the model's internal parameters (weights) are adjusted during each training step.\n",
+        " # it decides how fast the training converges.\n",
+        "optimizer = torch.optim.AdamW(m.parameters(), lr=1e-3)\n"
+      ],
+      "metadata": {
+        "id": "hetidKacqrX2"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch_size = 32\n",
+        "for steps in range(10000):\n",
+        "\n",
+        "  xb, yb = get_batch(TRAIN)\n",
+        "\n",
+        "  logits, loss = m(xb, yb)\n",
+        "  optimizer.zero_grad(set_to_none=True)\n",
+        "  loss.backward()\n",
+        "  optimizer.step()\n",
+        "\n",
+        "print(loss.item())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DDNhlBae5j1y",
+        "outputId": "a00732de-5660-49c9-c24e-1293f37f86f2"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.408472776412964\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# A huge improvement after training in the above step\n",
+        "print(decode(m.generate(idx, max_new_tokens=100)[0].tolist()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AO7QvLzQ5n5o",
+        "outputId": "204d25e6-6f7d-4bbe-e33b-e4154a44f402"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Y ly we glispudllourt?\n",
+            "Whe\n",
+            "ANo me handu, ithinomatoor'then inHNGERLOTheis t s? l ringot sh y thinove\n"
           ]
         }
       ]
@@ -565,7 +643,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "hetidKacqrX2"
+        "id": "UOWJGeIr6ETo"
       },
       "execution_count": null,
       "outputs": []
